# samsung-audit-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: chunker.py  config.py  db.py  embedder.py  generator.py  ingest.py  parser.py  qa.py  search.py  streamlit_app.py
data/parsed/: 감사보고서_2014.json  감사보고서_2015.json  감사보고서_2016.json  감사보고서_2017.json  감사보고서_2018.json  감사보고서_2019.json  감사보고서_2020.json  감사보고서_2021.json  감사보고서_2022.json  감사보고서_2023.json  감사보고서_2024.json
sql/: init.sql
tests/: test_data_schema.py
